--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# AI Agent configurations and skills
+.agent/
+.agents/
+.claude/
+.codes/
+.cursor/
+.codex/
+.gemini/
